<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="crop">Crop Image</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="nama_profile">Halo, User Asclepius</string>
    <string name="status">Status Kesehatan: </string>
    <string name="status_sekarang">Hijau</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_not_found">Gambar tidak ditemukan</string>
    <string name="top_bar">Halo, Pengguna Asclepius</string>
    <string name="text_scan">Detect</string>
    <string name="hasil_prediksi">Hasil Analisis:</string>
    <string name="image_not_crop">Silakan masukkan berkas gambar terlebih dahulu sebelum melakukan crop</string>
    <string name="dark_mode">Dark Mode</string>
</resources>